[package]
name = "pylyzer"
description = "A static code analyzer & language server for Python"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "crates/py2erg",
]

[workspace.package]
version = "0.0.23"
authors = ["Shunsuke Shibayama <sbym1346@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/mtshiba/pylyzer"

[workspace.dependencies]
erg_common = { version = "0.6.12-nightly.3", features = ["py_compat", "els"] }
erg_compiler = { version = "0.6.12-nightly.3", features = ["py_compat", "els"] }
els = { version = "0.1.24-nightly.3", features = ["py_compat"] }
rustpython-parser = "0.1.2"
# erg_compiler = { git = "https://github.com/erg-lang/erg", branch = "main", features = ["py_compat", "els"] }
# erg_common = { git = "https://github.com/erg-lang/erg", branch = "main", features = ["py_compat", "els"] }
# els = { git = "https://github.com/erg-lang/erg", branch = "main", features = ["py_compat"] }
# erg_compiler = { path = "../erg/crates/erg_compiler", features = ["py_compat", "els"] }
# erg_common = { path = "../erg/crates/erg_common", features = ["py_compat", "els"] }
# els = { path = "../erg/crates/els", features = ["py_compat"] }

[features]
debug = ["erg_compiler/debug", "erg_common/debug", "py2erg/debug"]
large_thread = ["erg_compiler/large_thread", "erg_common/large_thread", "els/large_thread"]
pretty = ["erg_compiler/pretty", "erg_common/pretty"]
backtrace = ["erg_common/backtrace"]

[dependencies]
erg_compiler = { workspace = true }
erg_common = { workspace = true }
els = { workspace = true }
rustpython-parser = { workspace = true }
py2erg = { version = "0.0.23", path = "./crates/py2erg" }

[lib]
path = "src/lib.rs"
