[package]
name = "pylyzer"
description = "A static code analyzer & language server for Python"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "crates/py2erg",
    "crates/pylyzer_core",
    "crates/pylyzer_wasm",
]

[workspace.package]
version = "0.0.61"
authors = ["Shunsuke Shibayama <sbym1346@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/mtshiba/pylyzer"

[workspace.dependencies]
erg_common = { version = "0.6.43-nightly.3", features = ["py_compat", "els"] }
erg_compiler = { version = "0.6.43-nightly.3", features = ["py_compat", "els"] }
els = { version = "0.1.55-nightly.3", features = ["py_compat"] }
# rustpython-parser = { version = "0.3.0", features = ["all-nodes-with-ranges", "location"] }
# rustpython-ast = { version = "0.3.0", features = ["all-nodes-with-ranges", "location"] }
rustpython-parser = { git = "https://github.com/RustPython/Parser", version = "0.4.0", features = ["all-nodes-with-ranges", "location"] }
rustpython-ast = { git = "https://github.com/RustPython/Parser", version = "0.4.0", features = ["all-nodes-with-ranges", "location"] }
# erg_compiler = { git = "https://github.com/erg-lang/erg", branch = "main", features = ["py_compat", "els"] }
# erg_common = { git = "https://github.com/erg-lang/erg", branch = "main", features = ["py_compat", "els"] }
# els = { git = "https://github.com/erg-lang/erg", branch = "main", features = ["py_compat"] }
# erg_compiler = { path = "../erg/crates/erg_compiler", features = ["py_compat", "els"] }
# erg_common = { path = "../erg/crates/erg_common", features = ["py_compat", "els"] }
# els = { path = "../erg/crates/els", features = ["py_compat"] }

[features]
debug = ["erg_common/debug", "pylyzer_core/debug"]
large_thread = ["erg_common/large_thread", "els/large_thread", "pylyzer_core/large_thread"]
pretty = ["erg_common/pretty", "pylyzer_core/pretty"]
backtrace = ["erg_common/backtrace", "els/backtrace", "pylyzer_core/backtrace"]
experimental = ["erg_common/experimental", "els/experimental", "pylyzer_core/experimental"]

[dependencies]
pylyzer_core = { version = "0.0.61", path = "./crates/pylyzer_core" }
erg_common = { workspace = true }
els = { workspace = true }

[dev-dependencies]
erg_compiler = { workspace = true }
